@startuml schemat_bazy

skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 12

skinparam entity {
  BackgroundColor #DEEAF1
  BorderColor #2E75B6
  FontName Arial
  FontSize 12
}

skinparam ArrowColor #2E75B6
skinparam ArrowFontName Arial
skinparam ArrowFontSize 11

title Schemat bazy danych

entity "users" as users {
  * id : VARCHAR(36)  <<PK>>
  --
  * username : VARCHAR(100)  <<UNIQUE>>
  * password : VARCHAR(255)
  * role : ENUM(CUSTOMER, EMPLOYEE, MANAGER)
  * created_at : DATETIME
}

entity "films" as films {
  * id : VARCHAR(36)  <<PK>>
  --
  * title : VARCHAR(255)
  * duration_minutes : INT
  * created_at : DATETIME
}

entity "halls" as halls {
  * id : VARCHAR(36)  <<PK>>
  --
  * name : VARCHAR(100)
  * capacity : INT
}

entity "screenings" as screenings {
  * id : VARCHAR(36)  <<PK>>
  --
  * film_id : VARCHAR(36)  <<FK>>
  * hall_id : VARCHAR(36)  <<FK>>
  * start_time : DATETIME
  * end_time : DATETIME
  * is_3d : TINYINT(1)
  * created_at : DATETIME
}

entity "seats" as seats {
  * id : VARCHAR(36)  <<PK>>
  --
  * screening_id : VARCHAR(36)  <<FK>>
  * row_number : INT
  * seat_number : INT
  * is_premium : TINYINT(1)
  * is_reserved : TINYINT(1)
  --
  UNIQUE(screening_id, row_number, seat_number)
}

entity "tickets" as tickets {
  * id : VARCHAR(36)  <<PK>>
  --
  * screening_id : VARCHAR(36)  <<FK>>
  * seat_id : VARCHAR(36)  <<FK, UNIQUE>>
  * owner_id : VARCHAR(36)  <<FK>>
  * price : DECIMAL(8,2)
  * status : ENUM(PURCHASED, RESERVED, RETURNED)
  * created_at : DATETIME
}

' Relacje z kardynalnością
films      ||--o{ screenings : "film_id\n1 : N"
halls      ||--o{ screenings : "hall_id\n1 : N"
screenings ||--o{ seats      : "screening_id\n1 : N"
screenings ||--o{ tickets    : "screening_id\n1 : N"
seats      ||--|| tickets    : "seat_id\n1 : 1"
users      ||--o{ tickets    : "owner_id\n1 : N"

@enduml
